--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,6 +1,18 @@
-/* This is an example of using Sass, otherwise plain CSS works too*/
-$primary-background: red;
+$yellow: #fcfc54;
+$green: #54fc54;
+$red: #fc5454;
+$black: #000;
+$font: 'VT323', monospace;
+
+//Use only the following font-sizes, in pixels:
+//36, 49, 65, 87, 116
 
 body {
-  background-color: $primary-background;
+  background-color: $black;
+  
+  .test {
+    color: $yellow;
+    font-family: $font;
+    font-size: px;
+  }
 }
