--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -8,8 +8,25 @@ $font: 'VT323', monospace;
 //36, 49, 65, 87, 116
 
 body {
+  background-color: $red;
+  font-family: $font;
+  font-size: 49px;
+}
+
+main {
   background-color: $black;
   color: $yellow;
-  font-family: $font;
-  font-size: 36px;
+  height: 100%;
+  width: 1280px;
+  margin: auto;
+}
+
+.splash-image__size {
+  width: 100%;
+}
+
+.game-board__backgroundImage {
+  background-color: $black;
+  background-image: url('../images/family-feud_board.gif');
+  height: 800px;
 }
