--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -6,7 +6,10 @@ $font: 'VT323', monospace;
 
 //Use only the following font-sizes, in pixels:
 //36, 49, 65, 87, 116
-
+* {
+  border: 1px solid blanchedalmond;
+  box-sizing: border-box;
+}
 body {
   background-color: $red;
   font-family: $font;
@@ -21,6 +24,20 @@ main {
   margin: auto;
 }
 
+.main-container__scoreboard {
+  display: grid;
+  grid-template-columns: 182px 182px 182px 182px 182px 182px 182px;
+  grid-template-rows: 114px 114px 114px 114px 114px 114px 114px;
+  grid-template-areas:
+  ". . . timer . . ."
+  ". . gameboard gameboard gameboard . ."
+  ". score1 . . . score2 ."
+  ". question question question question question ."
+  " . players players players players players buttons"
+  ". players players players players players buttons"
+  ". input input input input input buttons";  
+}
+
 .splash-image__size {
   width: 100%;
 }
@@ -29,4 +46,40 @@ main {
   background-color: $black;
   background-image: url('../images/family-feud_board.gif');
   height: 800px;
+}
+
+.main-div__timer {
+  grid-area: timer;
+}
+
+.main-table__responses {
+  grid-area: gameboard;
+}
+
+.main-div__player-one-score {
+  grid-area: score1;
+}
+
+.main-div__player-two-score {
+  grid-area: score2;
+}
+
+.main-p__question-prompt,
+.main-div__questions,
+.main-span__current-player,
+.main-span__current-question {
+  grid-area: question;
+  // align-self: stretch;
+}
+
+.main-section__game-buttons {
+  grid-area: buttons;
+}
+
+.main-section__guess-input {
+  grid-area: input;
+}
+
+.main-section__player-images {
+  grid-area: players;
 }
