--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -7,11 +7,11 @@ $font: 'VT323', monospace;
 //Use only the following font-sizes, in pixels:
 //36, 49, 65, 87, 116
 * {
-  border: 1px solid blanchedalmond;
-  box-sizing: border-box;
+  // border: 1px solid blanchedalmond;
+  // box-sizing: border-box;
 }
 body {
-  background-color: $red;
+  background-color: $black;
   font-family: $font;
   font-size: 49px;
 }
@@ -26,11 +26,11 @@ main {
 
 .main-container__scoreboard {
   display: grid;
-  grid-template-columns: 182px 182px 182px 182px 182px 182px 182px;
+  grid-template-columns: 149px 143px 253px 190px 253px 143px 148px;
   grid-template-rows: 66px 197px 21px 150px 155px 155px 50px;
   grid-template-areas:
   ". . . timer . . ."
-  ". score1 gameboard gameboard gameboard score2 ."
+  "score1 . gameboard gameboard gameboard . score2"
   ". . . . . . ."
   ". question question question question question ."
   " . players players players players players buttons"
@@ -50,26 +50,41 @@ main {
 
 .main-div__timer {
   grid-area: timer;
+  text-align: center;
+}
+
+.main-h4__timer {
+  font-size: 49px;
+  padding-top: 10px;
+  margin: 4px 9px 0px 0px;
 }
 
 .main-table__responses {
   grid-area: gameboard;
 }
 
-.main-div__player-one-score {
+.main-div__player-one-score,
+.main-h2__player-one-score {
   grid-area: score1;
+  font-size: 90px;
 }
 
-.main-div__player-two-score {
+.main-h2__player-one-score {
+  margin: 44px 40px 0px 110px;
+}
+
+.main-div__player-two-score,
+.main-h2__player-two-score {
+  font-size: 90px;
   grid-area: score2;
 }
 
-.main-p__question-prompt,
-.main-div__questions,
-.main-span__current-player,
-.main-span__current-question {
+.main-h2__player-two-score {
+  margin: 44px 0px 0px -40px;
+}
+
+.main-div__questions {
   grid-area: question;
-  // align-self: stretch;
 }
 
 .main-section__game-buttons {
