--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -8,7 +8,7 @@ $font: 'VT323', monospace;
 //36, 49, 65, 87, 116
 * {
   // border: 1px solid blanchedalmond;
-  // box-sizing: border-box;
+  box-sizing: border-box;
 }
 body {
   background-color: $black;
@@ -61,8 +61,8 @@ main {
 
 .main-container__scoreboard {
   display: grid;
-  grid-template-columns: 149px 143px 253px 190px 253px 143px 148px;
-  grid-template-rows: 66px 197px 21px 150px 155px 155px 50px;
+  grid-template-columns: 149px 149px 255px 180px 255px 140px 148px;
+  grid-template-rows: 69px 193px 21px 150px 155px 155px 50px;
   grid-template-areas:
   ". . . timer . . ."
   "score1 . gameboard gameboard gameboard . score2"
@@ -128,4 +128,33 @@ main {
 
 .main-section__player-images {
   grid-area: players;
+}
+
+.main-table__responses {
+  border: none;
+  border-collapse: collapse;
+}
+
+.tr {
+  border: 2px solid $red;
+  height: 64px;
+}
+
+.main-tr__middle-response {
+  margin: 0;
+  background-color: black;
+}
+
+.main-tr__middle-respondents {
+  border-left: 4px solid $red;
+}
+
+.td-answers {
+  width: 81.5%;
+  background-color: black;
+}
+
+.td-respondents {
+  background-color: black;
+  border-left: 4px solid $red;
 }
