--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -127,7 +127,10 @@ main {
 }
 
 .main-section__player-images {
+  display: flex;
   grid-area: players;
+  margin-top: 50px;
+  justify-content: space-around;
 }
 
 .main-table__responses {
@@ -142,4 +145,19 @@ main {
 
 .main-tr__middle-response {
   margin: 0;
+}
+
+.player.one, 
+.player.two {
+  display: block;
+  text-align: center;
+  width: 150px;
+}
+
+.player.turned {
+  display: none;
+}
+
+.player.face {
+  display: block;
 }
