--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -47,7 +47,10 @@ body {
 }
 
 .splash-image__size {
-  width: 100%;
+  width: 80%;
+  margin: -50px 10% 0px 10%;
+  // margin-right: 10%;
+  // margin-top: -50px;
 }
 
 /////////////////////Main game page styles/////////////////
@@ -129,7 +132,7 @@ main {
 .main-section__player-images {
   display: flex;
   grid-area: players;
-  margin-top: 50px;
+  margin-top: 100px;
   justify-content: space-around;
 }
 
