--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -140,8 +140,12 @@ main {
   grid-area: input;
 }
 
+.main-span__current-player {
+  color: $green;
+}
+
 .welcomeCenter {
-  border: 8px dotted $red;
+  border: 8px dotted $yellow;
   font-size: 49px;
   margin: 0 225px;
   text-align: center;
