Break out -variables.scss

--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -1,8 +1,4 @@
-$light-accent: #fcfc54;
-$gameboard: #54fc54;
-$dark-accent: #fc5454;
-$black: #000;
-$font: 'VT323', monospace;
+@import '_variables';
 
 body {
   background-color: $black;
