--- a/src/css/base.scss
+++ b/src/css/base.scss
@@ -230,7 +230,8 @@ main {
 }
 
 .main-button__submit-guess,
-.main-button__submit-multiplier {
+.main-button__submit-multiplier,
+.main-button__submit-fast-guess {
   margin-left: -70px;
 };
 
